fixed css problem with the pages

--- a/src/pages/ProfilePage.css
+++ b/src/pages/ProfilePage.css
@@ -6,7 +6,7 @@
     Arial, sans-serif;
 }
 
-.App {
+.profilepage {
   height: auto;
   width: 100%;
   /* background-color: rgba(172, 163, 41, 0.397); */
