--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,11 @@
     Arial, sans-serif;
 }
 
-
+/* 
 .App {
   height: 100vh;
   width: 100%;
-  /* background-color: rgba(236, 177, 15, 0.397); */
+  background-color: rgba(236, 177, 15, 0.397);
   display: grid;
   grid-template:
     "header header header header" 50px
@@ -18,7 +18,7 @@
     "space1 main-posts right-sidebar space2" 1fr/
     1fr 500px 300px 1fr;
   grid-gap: 20px;
-}
+} */
 
 .header {
   grid-area: header;
