--- a/src/pages/ProfilePage.css
+++ b/src/pages/ProfilePage.css
@@ -185,7 +185,13 @@
   display: grid;
   grid-auto-flow: column;
   grid-gap: 20px;
+  justify-content: center;
 }
+/* .feed-image-button{
+  display: grid;
+  justify-content: center;
+  
+} */
 .feed-content img {
   width: 100%;
   height: 300px;
@@ -199,6 +205,7 @@
 
 .footer {
   grid-area: footer;
+  display: grid;
 
   height: auto;
 }
@@ -213,6 +220,11 @@
   grid-gap: 5px;
 }
 
+.remove-post{
+background-color: red;
+justify-items: center;
+color: wheat;
+}
 @media (max-width: 668px) {
   .page-container {
     display: grid;
